fixed overflow issue

--- a/styles/fitform.css
+++ b/styles/fitform.css
@@ -576,6 +576,7 @@ body>header {
     padding: 0;
     left: 0;
     height: 5300px;
+    overflow-y: hidden;
   }
   #logo {
     display: none;
